<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_header_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/label_header_name" />

    <EditText
        android:id="@+id/et_header_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:hint="@string/hint_header_name"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_header_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/label_header_value" />

    <EditText
        android:id="@+id/et_header_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:hint="@string/hint_header_value"
        android:inputType="text" />

</LinearLayout>