<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/liner_layout_request"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_layout_shape"
        android:orientation="vertical"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:gravity="center_vertical"
                android:text="@string/label_url"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/id_edittext_uri"
                android:layout_width="fill_parent"
                android:layout_height="26dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:background="@drawable/edittext_selector"
                android:hint="@string/et_url_hint"
                android:inputType="textUri"
                android:textSize="12sp" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:gravity="center_vertical"
                android:text="@string/label_method"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:entries="@array/method_array"
                android:textSize="12sp" /><Button
                android:id="@+id/bt_send"
                android:layout_width="fill_parent"
                android:layout_height="25dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/button_selector"
                android:gravity="center|center_vertical"
                android:text="@string/bt_text_send"
                android:textColor="@color/white"
                android:textSize="13sp" />
</LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_headers_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_layout_shape"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical|left"
            android:text="@string/label_headers"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_body_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_layout_shape"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical|left"
            android:text="@string/label_body"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/id_edittext_body"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edittext_selector"
            android:gravity="top|left"
            android:hint="@string/et_body_hint"
            android:inputType="textMultiLine"
            android:lines="8"
            android:scrollbars="vertical|none"
            android:textSize="12sp" >
        </EditText>
    </LinearLayout>

</LinearLayout>